--- a/ud1/ejemplo2.html
+++ b/ud1/ejemplo2.html
@@ -63,5 +63,10 @@
         <a href="sbohjes2104@g.educaand.es">Enviar correo</a><br>
         </center>
         <hr>
+        <table border="1">
+            <tr><th>lunes</th><th>martes</th><th>miercoles</th><th>jueves</th><th>viernes</th></tr>
+            <tr><td>ENDES</td><td>ING</td><td>LMSGI</td><td>STINF</td><td>SAS</td>
+            <tr><td>PROGR</td><td>DAS</td><td>ENDES</td><td>ENDES</td><td>IPE</td>
+        </table>
     </body>
 </html>
