--- a/ud1/ejemplo2.html
+++ b/ud1/ejemplo2.html
@@ -63,15 +63,15 @@
         <a href="sbohjes2104@g.educaand.es">Enviar correo</a><br>
         </center>
         <hr>
-        <a href="https//www.google.es"><img src="img/google_logo.png" border="0" width="40" height="40" title="google"> Ir a google</a>
-        <a href="https//www.facebook.com"><img src="img/Facebook_Logo.png" border="0" width="40" height="40" title="Facebook"> Ir a Facebook</a>
-        <a href="https//www.twitter.com"><img src="img/Twitter_Logo.png" border="0" width="40" height="40" title="Twitter"> Ir a Twitter</a>
+        <a href="http://google.es/"><img src="img/google_logo.png" border="0" width="40" height="40" title="google"> Ir a google</a>
+        <a href="http://facebook.com/"><img src="img/Facebook_Logo.png" border="0" width="40" height="40" title="Facebook"> Ir a Facebook</a>
+        <a href="http://www.twitter.com/"><img src="img/Twitter_Logo.png" border="0" width="40" height="40" title="Twitter"> Ir a Twitter</a>
         <table border="1">
             <tr><th>lunes</th><th>martes</th><th>miercoles</th><th>jueves</th><th>viernes</th></tr>
             <tr><td>ENDES</td><td>ING</td><td>LMSGI</td><td>STINF</td><td>SAS</td>
             <tr><td>PROGR</td><td>DAS</td><td>ENDES</td><td>ENDES</td><td>IPE</td>
             <tr><td>PROGR</td><td>IPE</td><td>STRINF</td><td>PROGR</td><td>PROGR</td>
-            <tr><td><font color="blue">RECREO</font></td><td><font color="blue">RECREO</font></td><td><font color="blue">RECREO</font></td><td><font color="blue">RECREO</font></td><td><font color="blue">RECREO</font></td>
+            <tr><td colspan="5" align="center" style="background-color: rgb(0, 255, 21);">RECREO</td>
             <tr><td>BADAT</td><td>BADAT</td><td>STRINF</td><td>PROGR</td><td>PROGR</td>
             <tr><td>BADAT</td><td>BADAT</td><td>BADAT</td><td>IPE</td><td>STRINF</td>
             <tr><td>ING</td><td>LMSGI</td><td>BADAT</td><td>LMSGI</td><td>STRINF</td>
