--- a/ud1/ejemplo_enlaces.html
+++ b/ud1/ejemplo_enlaces.html
@@ -1,7 +1,21 @@
-<html>
-	<a href=https://www.mozilla.org/>mi sitio web favorito</a>
-	<a href='http://www.ejemplo.com'>Un enlace a mi ejemplo.</a>
-	<a href='http://www.ejemplo.com' title=Es correcto o no>Un enlace a mi ejemplo.</a>
-	<a href="http://www.ejemplo.com" title="¿Es 'correcto'?">Un enlace a mi ejemplo.</a>
-	<a href='http://www.ejemplo.com' title='¿Es 'correcto'?'>Un enlace a mi ejemplo.</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>ejemplo enlaces</title>
+</head>
+<body>
+	<h3 align="center"> Enlaces varios: </h3>
+	<hr>
+	<center>
+	<a href="http://google.es/">Buscador de google</a><br>
+	<a href="actividad3.html">Abrir la actividad 3</a><br>
+	<a href="sbohjes2104@g.educaand.es">Enviar correo</a><br>
+	</center>
+	<hr>
+	<a href="http://google.es/"><img src="img/google_logo.png" border="0" width="40" height="40" title="google"> Ir a google</a>
+	<a href="http://facebook.com/"><img src="img/Facebook_Logo.png" border="0" width="40" height="40" title="Facebook"> Ir a Facebook</a>
+	<a href="http://www.twitter.com/"><img src="img/Twitter_Logo.png" border="0" width="40" height="40" title="Twitter"> Ir a Twitter</a>	
+</body>
 </html>
