--- a/ud1/horario_clase.html
+++ b/ud1/horario_clase.html
@@ -7,13 +7,50 @@
 </head>
 <body>
     <table border="1" align="center">
-        <tr align="center" style="background-color: rgb(82, 209, 23);"><th>lunes</th><th>martes</th><th>miercoles</th><th>jueves</th><th>viernes</th></tr>
-        <tr align="center"><td style="background-color: rgb(47, 222, 228);">ENDES</td><td style="background-color: rgb(241, 230, 69);">ING</td><td>LMSGI</td><td>STINF</td><td>SAS</td>
-        <tr align="center"><td style="background-color: rgb(201, 114, 241);">PROGR</td><td style="background-color: rgb(110, 146, 51);">DAS</td><td style="background-color: rgb(47, 222, 228);">ENDES</td><td style="background-color: rgb(47, 222, 228);">ENDES</td><td style="background-color: rgb(206, 99, 12);">IPE</td>
-        <tr align="center"><td style="background-color: rgb(201, 114, 241);">PROGR</td><td style="background-color: rgb(206, 99, 12);">IPE</td><td>STRINF</td><td style="background-color: rgb(201, 114, 241);">PROGR</td><td style="background-color: rgb(201, 114, 241);">PROGR</td>
-        <tr align="center"><td colspan="5" align="center" style="background-color: rgb(15, 190, 29); font-weight: bold;">RECREO</td>
-        <tr align="center"><td style="background-color: rgb(236, 152, 83);">BADAT</td><td style="background-color: rgb(236, 152, 83);">BADAT</td><td>STRINF</td><td style="background-color: rgb(201, 114, 241);">PROGR</td><td style="background-color: rgb(201, 114, 241);">PROGR</td>
-        <tr align="center"><td style="background-color: rgb(236, 152, 83);">BADAT</td><td style="background-color: rgb(236, 152, 83);">BADAT</td><td style="background-color: rgb(236, 152, 83);">BADAT</td><td style="background-color: rgb(206, 99, 12);">IPE</td><td>STRINF</td>
-        <tr align="center"><td style="background-color: rgb(241, 230, 69);">ING</td><td>LMSGI</td><td style="background-color: rgb(236, 152, 83);">BADAT</td><td>LMSGI</td><td>STRINF</td>
+        <tr align="center" style="background-color: rgb(82, 209, 23);">
+            <th>lunes</th>
+            <th>martes</th>
+            <th>miercoles</th>
+            <th>jueves</th>
+            <th>viernes</th>
+        </tr>
+        <tr align="center">
+            <td style="background-color: rgb(47, 222, 228);">ENDES</td>
+            <td style="background-color: rgb(241, 230, 69);">ING</td>
+            <td style="background-color: rgb(91, 93, 241);">LMSGI</td>
+            <td style="background-color: rgb(241, 91, 99);">STINF</td>
+            <td style="background-color: rgb(107, 231, 82);">SAS</td>
+        <tr align="center">
+            <td style="background-color: rgb(201, 114, 241);">PROGR</td>
+            <td style="background-color: rgb(110, 146, 51);">DAS</td>
+            <td style="background-color: rgb(47, 222, 228);">ENDES</td>
+            <td style="background-color: rgb(47, 222, 228);">ENDES</td>
+            <td style="background-color: rgb(206, 99, 12);">IPE</td>
+        <tr align="center">
+            <td style="background-color: rgb(201, 114, 241);">PROGR</td>
+            <td style="background-color: rgb(206, 99, 12);">IPE</td>
+            <td style="background-color: rgb(241, 91, 99);">STRINF</td>
+            <td style="background-color: rgb(201, 114, 241);">PROGR</td>
+            <td style="background-color: rgb(201, 114, 241);">PROGR</td>
+        <tr align="center">
+            <td colspan="5" align="center" style="background-color: rgb(15, 190, 29); font-weight: bold;">RECREO</td>
+        <tr align="center">
+            <td style="background-color: rgb(236, 152, 83);">BADAT</td>
+            <td style="background-color: rgb(236, 152, 83);">BADAT</td>
+            <td style="background-color: rgb(241, 91, 99);">STRINF</td>
+            <td style="background-color: rgb(201, 114, 241);">PROGR</td>
+            <td style="background-color: rgb(201, 114, 241);">PROGR</td>
+        <tr align="center">
+            <td style="background-color: rgb(236, 152, 83);">BADAT</td>
+            <td style="background-color: rgb(236, 152, 83);">BADAT</td>
+            <td style="background-color: rgb(236, 152, 83);">BADAT</td>
+            <td style="background-color: rgb(206, 99, 12);">IPE</td>
+            <td style="background-color: rgb(241, 91, 99);">STRINF</td>
+        <tr align="center">
+            <td style="background-color: rgb(241, 230, 69);">ING</td>
+            <td style="background-color: rgb(91, 93, 241);">LMSGI</td>
+            <td style="background-color: rgb(236, 152, 83);">BADAT</td>
+            <td style="background-color: rgb(91, 93, 241);">LMSGI</td>
+            <td style="background-color: rgb(241, 91, 99);">STRINF</td>
 </body>
 </html>
