--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h2>Lenguaje de Marcas 1 DAW</h2>
 
 <h3>Tema1: Introducción al lenguaje de marcas</h3>
-<p>Ejercicio1:<a href="./ud1/T1 EJ1 XML/ciudades.xml">ciudades </a></p>
+<p>Ejercicio1:<a href="./ud1/T1 EJ2 XML/fechas/fechas.xml">fechas </a></p>
 <p>Ejercicio2:<a href="./ud1/T1 EJ2 XML/articulos/articulos.xml">articulos </a></p>
 
 <h3>Tema2: HTML</h3>
