--- a/index.html
+++ b/index.html
@@ -8,3 +8,8 @@
 <h3>Tema2: HTML</h3>
 <p>Ejercicio1:<a href="./ud2/lista_de_asignaturas.html"> lista_de_asignaturas</a></p>
 <p>Ejercicio2:<a href="./ud2/horario_clase.html">horario_clase</a></p>
+
+wikipedia
+<iframe width="300" height="250" src="https://es.wikipedia.org/wiki/Wikipedia:Portada" frameborder="1" scrolling="yes" id="framel"></iframe>
+dino
+<iframe width="900" height="350" src="https://dinorunner.com/es/" frameborder="1" scrolling="yes" id="framel"></iframe>
