--- a/ud2/formulario.html
+++ b/ud2/formulario.html
@@ -15,7 +15,7 @@
             Dirección...<input type="text" name="direcc" size="20" maxlength="30"><br>
             Teléfono....<input type="text" name="tlf" size="10" maxlength="10" value="0"><br>
             Edad........<input type="text" name="edad" size="3" maxlength="3" value="0"><br>
-            Población...<input type="text" name="pobl" size="20" maxlength="30" value="talavera"><br>
+            Población...<input type="text" name="pobl" size="20" maxlength="30" value="jere de l fra"><br>
             Clave.......<input type="password" name="clave" size="10" maxlength="20"><br>
         </p>
     </form>
