--- a/ud2/ejemplo_enlaces.html
+++ b/ud2/ejemplo_enlaces.html
@@ -1,21 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ejemplo enlaces</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejemplo enlaces</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 20px;
+            line-height: 1.6;
+        }
+
+        h3 {
+            color: #1a237e;
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 30px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        hr {
+            border: none;
+            height: 2px;
+            background: linear-gradient(to right, #1a237e, #7986cb, #1a237e);
+            margin: 20px 0;
+        }
+
+        .enlaces-texto {
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            margin: 20px auto;
+            max-width: 500px;
+        }
+
+        .enlaces-texto a {
+            display: inline-block;
+            color: #3f51b5;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 10px;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            background-color: #f5f5f5;
+        }
+
+        .enlaces-texto a:hover {
+            background-color: #3f51b5;
+            color: white;
+            transform: translateY(-2px);
+        }
+
+        .enlaces-sociales {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+            padding: 20px;
+        }
+
+        .enlaces-sociales a {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: #424242;
+            padding: 10px 20px;
+            background-color: white;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .enlaces-sociales a:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+
+        .enlaces-sociales img {
+            margin-right: 10px;
+            border-radius: 5px;
+        }
+
+        /* Diseño responsive */
+        @media (max-width: 600px) {
+            .enlaces-sociales {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .enlaces-sociales a {
+                width: 80%;
+                justify-content: center;
+            }
+        }
+    </style>
 </head>
 <body>
-	<h3 align="center"> Enlaces varios: </h3>
-	<hr>
-	<center>
-	<a href="http://google.es/">Buscador de google</a><br>
-	<a href="actividad3.html">Abrir la actividad 3</a><br>
-	<a href="sbohjes2104@g.educaand.es">Enviar correo</a><br>
-	</center>
-	<hr>
-	<a href="http://google.es/"><img src="img/google_logo.png" border="0" width="40" height="40" title="google"> Ir a google</a>
-	<a href="http://facebook.com/"><img src="img/Facebook_Logo.png" border="0" width="40" height="40" title="Facebook"> Ir a Facebook</a>
-	<a href="http://www.twitter.com/"><img src="img/Twitter_Logo.png" border="0" width="40" height="40" title="Twitter"> Ir a Twitter</a>	
+    <h3>Enlaces varios</h3>
+    <hr>
+    <div class="enlaces-texto">
+        <a href="http://google.es/">Buscador de google</a>
+        <a href="actividad3.html">Abrir la actividad 3</a>
+        <a href="mailto:sbohjes2104@g.educaand.es">Enviar correo</a>
+    </div>
+    <hr>
+    <div class="enlaces-sociales">
+        <a href="http://google.es/">
+            <img src="img/google_logo.png" width="40" height="40" alt="Google" title="Google">
+            Ir a Google
+        </a>
+        <a href="http://facebook.com/">
+            <img src="img/Facebook_Logo.png" width="40" height="40" alt="Facebook" title="Facebook">
+            Ir a Facebook
+        </a>
+        <a href="http://www.twitter.com/">
+            <img src="img/Twitter_Logo.png" width="40" height="40" alt="Twitter" title="Twitter">
+            Ir a Twitter
+        </a>
+    </div>
 </body>
 </html>
