--- a/ud2/tipos_de_textos.html
+++ b/ud2/tipos_de_textos.html
@@ -3,19 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tipos de texto</title>
+    <title>Tipos de Texto</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 30px;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e4e8eb 100%);
+            line-height: 2;
+            color: #2d3748;
+        }
+
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .text-line {
+            margin: 20px 0;
+            padding: 10px;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .text-line:hover {
+            background-color: #f8fafc;
+            transform: translateX(10px);
+        }
+
+        .normal {
+            font-weight: normal;
+        }
+
+        .superindice {
+            vertical-align: super;
+            font-size: 0.8em;
+            color: #4a5568;
+        }
+
+        .subindice {
+            vertical-align: sub;
+            font-size: 0.8em;
+            color: #4a5568;
+        }
+
+        .texto-grande {
+            font-size: 1.2em;
+            color: #2b6cb0;
+        }
+
+        .texto-pequeño {
+            font-size: 0.8em;
+            color: #718096;
+        }
+
+        .arial {
+            font-family: Arial, sans-serif;
+            color: #2c5282;
+        }
+
+        .times {
+            font-family: 'Times New Roman', Times, serif;
+            color: #2d3748;
+        }
+
+        .courier {
+            font-family: 'Courier New', Courier, monospace;
+            color: #1a365d;
+        }
+
+        .azul {
+            color: #3182ce;
+            font-weight: 500;
+            text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+        }
+
+        .amarillo {
+            color: #d69e2e;
+            font-weight: 500;
+            text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+        }
+
+        /* Animación de entrada */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .text-line {
+            animation: fadeIn 0.5s ease-out forwards;
+            opacity: 0;
+        }
+
+        .text-line:nth-child(1) { animation-delay: 0.1s; }
+        .text-line:nth-child(2) { animation-delay: 0.2s; }
+        .text-line:nth-child(3) { animation-delay: 0.3s; }
+        .text-line:nth-child(4) { animation-delay: 0.4s; }
+        .text-line:nth-child(5) { animation-delay: 0.5s; }
+        .text-line:nth-child(6) { animation-delay: 0.6s; }
+        .text-line:nth-child(7) { animation-delay: 0.7s; }
+        .text-line:nth-child(8) { animation-delay: 0.8s; }
+        .text-line:nth-child(9) { animation-delay: 0.9s; }
+        .text-line:nth-child(10) { animation-delay: 1s; }
+    </style>
 </head>
 <body>
-    <br>Este texto es normal.
-    <br>Normal,<sup>Esto es un superindice.</sup>
-    <br>Norma1,<sub>Esto es un subindice.</sub>
-    <br>Norma1,<big>Este texto es algo mayor aI normal.</big>
-    <br>Normalr<sma1l>Este es algo menor a1 normal.</small>
-    <br><font face="arial">Texto de prueba 12345 con tipo ariak </font>
-    <br><font face="times new roman">Texto de prueba 12345 con tipo times new roman</font>
-    <br><font face="courier new">Texto de prueba 12345 con tipo courier new</font>
-    <br><font color="blue">Esto es azul</font>
-    <br><font color="yellow">Esto es amarillo</font>
-    <br><font color="blue">Esto es azul</font>
+    <div class="container">
+        <div class="text-line normal">Este texto es normal.</div>
+        <div class="text-line">Normal, <span class="superindice">Esto es un superíndice.</span></div>
+        <div class="text-line">Normal, <span class="subindice">Esto es un subíndice.</span></div>
+        <div class="text-line">Normal, <span class="texto-grande">Este texto es algo mayor al normal.</span></div>
+        <div class="text-line">Normal, <span class="texto-pequeño">Este es algo menor al normal.</span></div>
+        <div class="text-line arial">Texto de prueba 12345 con tipo Arial</div>
+        <div class="text-line times">Texto de prueba 12345 con tipo Times New Roman</div>
+        <div class="text-line courier">Texto de prueba 12345 con tipo Courier New</div>
+        <div class="text-line azul">Esto es azul</div>
+        <div class="text-line amarillo">Esto es amarillo</div>
+    </div>
 </body>
 </html>
