--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
     <p>Ejercicio1: <a href="./ud2/lista_de_asignaturas.html">lista_de_asignaturas</a></p>
     <p>Ejercicio2: <a href="./ud2/horario_clase.html">horario_clase</a></p>
 
+    <h3>Tema3: CSS</h3>
+    <p>Ejercicio1: <a href="./ud2/calculadora/index.html">calculadora</a></p>
+
     <div class="iframe-container">
         <div class="iframe-title">Wikipedia</div>
         <iframe width="300" height="250" src="https://es.wikipedia.org/wiki/Wikipedia:Portada" frameborder="0" scrolling="yes" id="framel"></iframe>
