--- a/ud2/brujula_social/index.html
+++ b/ud2/brujula_social/index.html
@@ -14,7 +14,7 @@
       <img src="./img/logo.png"></a></div>
 		<nav class="navegacion">
       <ul class="menu">
-				<li><a href="#">Inicio</a></li>
+				<li><a href="./index.html">Inicio</a></li>
 				<li><a href="#">Historia</a></li>
         <li><a href="#">Equipo</a></li>
         <li><a href="#">Preguntas Frecuentes</a></li>
@@ -94,11 +94,11 @@
         <footer class="footer">
           <div class="footer-container">
               <div class="footer-logo">
-                  <img src="./img/logo.png" alt="Brujula Social">
+                  <img src="./img/logoreal.png" alt="Brujula Social">
               </div>
               <div class="footer-info">
                   <p>Asociación Brújula Gabinete Socioeducativo y Psicológico
-
+                  
                   Avenida de la Libertad,11, Edificio América, local 16. El Puerto de Santa María. Cádiz 
                   
                   CIF G- 72232218
@@ -108,7 +108,7 @@
                   CONTÁCTE CON NOSOTRAS 672057038 </p>
               </div>
               <div class="footer-social">
-                  <a href="https://www.facebook.com/asociacionbrujula/photos/"><img src="./img/Facebook_Logo.png" alt="Facebook"></a>
+                  <a href="https://www.facebook.com/asociacionbrujula/photos/"><img src="./img/Facebook-logo-1.png" alt="Facebook"></a>
                   <a class="x" href="https://x.com/brujulagabinete"><img src="./img/Twitter_Logo.png" alt="Twitter"></a>
                   <a class="ig" href="https://www.instagram.com/brujulagabinete/?hl=es"><img src="./img/Instagram-Logo.png" alt="Instagram"></a>
               </div>
