--- a/ud2/brujula_social/index.html
+++ b/ud2/brujula_social/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
   <header>
-
     <div class="logo">
       <img src="./img/logo.png"></a></div>
 		<nav class="navegacion">
       <ul class="menu">
 				<li><a href="./index.html">Inicio</a></li>
-				<li><a href="#">Historia</a></li>
-        <li><a href="#">Equipo</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
-				<li><a href="#">Servicios</a></li>
-				<li><a href="#">Contacto</a></li>
+				<li><a href="./index_historia.html">Historia</a></li>
+        <li><a href="./index_equipo.html">Equipo</a></li>
+        <li><a href="./index_preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
+				<li><a href="./index_servicios.html">Servicios</a></li>
+				<li><a href="./index_contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
