--- a/ud2/brujula_social/index_servicios.html
+++ b/ud2/brujula_social/index_servicios.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style_servicios.css">
     <title>Servicios</title>
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <img src="./img/logo.png"></a></div>
+        <nav class="navegacion">
+      <ul class="menu">
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./index_historia.html">Historia</a></li>
+                <li><a href="./index_equipo.html">Equipo</a></li>
+                <li><a href="./index_preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
+                <li><a href="./index_servicios.html">Servicios</a></li>
+                <li><a href="./index_contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
+
+    
     <section class="section servicios-section">
         <div class="wrap-title-section">
           <h2>Nuestros Servicios</h2>
