--- a/ud2/brujula_social/index_equipo.html
+++ b/ud2/brujula_social/index_equipo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style_equipo.css">
-    <link rel="stylesheet" type="text/css" href="nav.css">
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" type="text/css" href="nav_footer.css">
+    <link rel="icon" type="image/png" href="img/logo.png">
     <title>Equipo</title>
 </head>
 <body>
