--- a/ud2/brujula_social/index_preguntas_frecuentes.html
+++ b/ud2/brujula_social/index_preguntas_frecuentes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_preguntas_frecuentes.css">
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" type="text/css" href="nav_footer.css">
+    <link rel="icon" type="image/png" href="img/logo.png">
     <title>Preguntas Frecuentes</title>
 </head>
 <body>
