--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
     <h3>Tema3: CSS</h3>
     <p>Ejercicio1: <a href="./ud2/calculadora/index.html">calculadora</a></p>
+    <p>Brujula Social: <a href="./ud2/brujula_social/index.html">Brujula Social</a></p>
 
     <div class="iframe-container">
         <div class="iframe-title">Wikipedia</div>
