--- a/ud2/brujula_social/index.html
+++ b/ud2/brujula_social/index.html
@@ -30,7 +30,7 @@
           <p>"disfrutar de los avances de toda persona que lucha, ver como repercuten positivamente en la unidad familiar y saber que con paciencia,
              constacia y trabajo se consiguen grandes logros, hace que amemos nuestro trabajo"</p>
           <div class="wrap-cta">
-            <a href="#info-contacto"class="cta-a">Llamanos</a>
+            <a href="./index_contacto.html"class="cta-a">Llamanos</a>
           </div>
         </div>
       </section>
@@ -52,7 +52,8 @@
   <div class="main-content-wrapper">
     <h1>¿Desea obtener información más detallada?</h1>
     <div class="main-content-box">
-     <button>Contactanos</button>
+      <br>
+      <a href="./index_contacto.html"class="cta-a">Contactanos</a>
     </div>
   </div>
 
