--- a/index.html
+++ b/index.html
@@ -96,8 +96,11 @@
     <p>Ejercicio2: <a href="./ud2/horario_clase.html">horario_clase</a></p>
 
     <h3>Tema3: CSS</h3>
-    <p>Ejercicio1: <a href="./ud2/calculadora/index.html">calculadora</a></p>
+    <p>Ejercicio1: <a href="./ud2/calculadora/index.html">Calculadora</a></p>
     <p>Brujula Social: <a href="./ud2/brujula_social/index.html">Brujula Social</a></p>
+    <p>Bootstrap: <a href="./ud2/bootstrap/index_bootstrap.html">Bootstrap</a></p>
+    <p>Bootstrap 5: <a href="./ud2/bootstrap/index_bootstrap_5.html">Bootstrap</a></p>
+    
 
     <div class="iframe-container">
         <div class="iframe-title">Wikipedia</div>
