--- a/index.html
+++ b/index.html
@@ -2,86 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfolio Sergio Bohorquez</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-            line-height: 1.6;
-        }
-
-        h1 {
-            color: #2c3e50;
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            border-bottom: 3px solid #3498db;
-            padding-bottom: 10px;
-        }
-
-        h2 {
-            color: #34495e;
-            text-align: center;
-            font-size: 1.8em;
-            margin-bottom: 30px;
-        }
-
-        h3 {
-            color: #16a085;
-            font-size: 1.5em;
-            margin-top: 30px;
-            padding: 10px;
-            background-color: #e8f6f3;
-            border-radius: 5px;
-        }
-
-        p {
-            margin: 15px 0;
-            padding-left: 20px;
-        }
-
-        a {
-            color: #3498db;
-            text-decoration: none;
-            padding: 5px 10px;
-            border-radius: 3px;
-            transition: all 0.3s ease;
-        }
-
-        a:hover {
-            background-color: #3498db;
-            color: white;
-            transform: translateX(10px);
-        }
-
-        iframe {
-            display: block;
-            margin: 20px auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        /* Contenedor para los iframes */
-        .iframe-container {
-            margin-top: 40px;
-            text-align: center;
-        }
-
-        .iframe-container iframe {
-            margin: 20px 0;
-        }
-
-        /* Título para los iframes */
-        .iframe-title {
-            font-weight: bold;
-            color: #2c3e50;
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
-    </style>
 </head>
 <body>
     <h1>Sergio Bohorquez</h1>
@@ -100,6 +22,8 @@
     <p>Brujula Social: <a href="./ud2/brujula_social/index.html">Brujula Social</a></p>
     <p>Bootstrap: <a href="./ud2/bootstrap/index_bootstrap.html">Bootstrap</a></p>
     <p>Bootstrap 5: <a href="./ud2/bootstrap/index_bootstrap_5.html">Bootstrap</a></p>
+
+    <h3>Tema4: JS</h3>
     
 
     <div class="iframe-container">
