--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio Sergio Bohorquez</title>
 </head>
 <body>
-    <h1>Sergio Bohorquez</h1>
+    <h1>Sergio Bohórquez</h1>
     <h2>Lenguaje de Marcas 1 DAW</h2>
 
     <h3>Tema1: Introducción al lenguaje de marcas</h3>
@@ -14,24 +14,25 @@
     <p>Ejercicio2: <a href="./ud1/T1 EJ2 XML/articulos/articulos.xml">articulos</a></p>
 
     <h3>Tema2: HTML</h3>
-    <p>Ejercicio1: <a href="./ud2/lista_de_asignaturas.html">lista_de_asignaturas</a></p>
-    <p>Ejercicio2: <a href="./ud2/horario_clase.html">horario_clase</a></p>
+    <p>Ejercicio1: <a href="./ud2/lista_de_asignaturas.html">lista de asignaturas</a></p>
+    <p>Ejercicio2: <a href="./ud2/horario_clase.html">horario clase</a></p>
 
     <h3>Tema3: CSS</h3>
-    <p>Ejercicio1: <a href="./ud2/calculadora/index.html">Calculadora</a></p>
-    <p>Brujula Social: <a href="./ud2/brujula_social/index.html">Brujula Social</a></p>
-    <p>Bootstrap: <a href="./ud2/bootstrap/index_bootstrap.html">Bootstrap</a></p>
-    <p>Bootstrap 5: <a href="./ud2/bootstrap/index_bootstrap_5.html">Bootstrap</a></p>
+    <p>Ejercicio1: <a href="./ud3/calculadora/index.html">Calculadora</a></p>
+    <p>Brujula Social: <a href="./ud3/brujula_social/index.html">Brujula Social</a></p>
+    <p>Bootstrap: <a href="./ud3/bootstrap/index_bootstrap.html">Bootstrap</a></p>
+    <p>Bootstrap 5: <a href="./ud3/bootstrap/index_bootstrap_5.html">Bootstrap</a></p>
 
     <h3>Tema4: JS</h3>
     
 
-    <div class="iframe-container">
+    <!--<div class="iframe-container">
         <div class="iframe-title">Wikipedia</div>
         <iframe width="300" height="250" src="https://es.wikipedia.org/wiki/Wikipedia:Portada" frameborder="0" scrolling="yes" id="framel"></iframe>
         
         <div class="iframe-title">Dino Runner</div>
         <iframe width="900" height="350" src="https://dinorunner.com/es/" frameborder="0" scrolling="yes" id="framel"></iframe>
-    </div>
+    </div>-->
+
 </body>
 </html>
